# test_cmake_add_library_stub

./: .gitignore  CMakeLists.txt  README.md  main.cpp
